Added types, updated name, added dynamic map ID support

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,11 @@
       "esnext",
       "dom"
     ],
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "typeRoots": [
+      "node_modules/@types",
+      "@types"
+    ],
   },
   "include": [
     "src/**/*.ts",
