--- a/package.json
+++ b/package.json
@@ -3,18 +3,25 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --https --host",
     "build": "vue-tsc --noEmit && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest tests/unit"
   },
   "dependencies": {
     "@ar-js-org/ar.js": "^3.4.0",
     "vue": "^3.2.25"
   },
   "devDependencies": {
+    "@types/jest": "^28.1.1",
     "@vitejs/plugin-vue": "^2.3.3",
+    "@vue/test-utils": "^2.0.0-rc.18",
+    "jest": "^26.6.3",
+    "jest-fetch-mock": "^3.0.3",
+    "ts-jest": "^26.5.6",
     "typescript": "^4.5.4",
     "vite": "^2.9.9",
+    "vue-jest": "^5.0.0-alpha.10",
     "vue-tsc": "^0.34.7"
   }
 }
