--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,8 @@
       "@types"
     ],
     "types": [
-      "vite/client"
+      "vite/client",
+      "@types/jest"
     ],
   },
   "include": [
