--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@ar-js-org/ar.js": "^3.4.0",
+    "@vueform/multiselect": "^2.4.2",
     "vue": "^3.2.25"
   },
   "devDependencies": {
     "@types/jest": "^28.1.1",
     "@vitejs/plugin-vue": "^2.3.3",
+    "@vue-leaflet/vue-leaflet": "^0.6.1",
     "@vue/test-utils": "^2.0.0-rc.18",
     "jest": "^26.6.3",
     "jest-fetch-mock": "^3.0.3",
