--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@ar-js-org/ar.js": "^3.4.0",
     "@vueform/multiselect": "^2.4.2",
+    "idb": "^7.0.2",
     "vue": "^3.2.25"
   },
   "devDependencies": {
     "@types/jest": "^28.1.1",
+    "@types/leaflet.locatecontrol": "^0.74.0",
     "@vitejs/plugin-vue": "^2.3.3",
     "@vue-leaflet/vue-leaflet": "^0.6.1",
     "@vue/test-utils": "^2.0.0-rc.18",
@@ -24,6 +26,9 @@
     "typescript": "^4.5.4",
     "vite": "^2.9.9",
     "vue-jest": "^5.0.0-alpha.10",
+    "@types/leaflet-geosearch": "^3.0.0",
+    "leaflet-geosearch": "^3.6.1",
+    "leaflet.locatecontrol": "^0.76.1",
     "vue-tsc": "^0.34.7"
   }
 }
