--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@m-media/npm-cartes-io": "^0.0.4",
     "@vueform/multiselect": "^2.4.2",
     "aframe": "^1.3.0",
+    "aframe-look-at-component": "^1.0.0",
     "idb": "^7.0.2",
     "vue": "^3.2.25"
   },
