--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "@vue/test-utils": "^2.0.0-rc.18",
     "jest": "^26.6.3",
     "jest-fetch-mock": "^3.0.3",
+    "laravel-echo": "^1.13.0",
     "leaflet-geosearch": "^3.6.1",
     "leaflet.locatecontrol": "^0.76.1",
     "leaflet.markercluster": "^1.5.3",
+    "pusher-js": "^7.3.0",
     "ts-jest": "^26.5.6",
     "typescript": "^4.5.4",
     "vite": "^2.9.9",
