--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "cartesar",
-  "private": true,
-  "version": "0.0.0",
+  "name": "cartesio",
+  "private": false,
+  "version": "0.0.1",
   "scripts": {
     "dev": "vite --https --host",
     "build": "vue-tsc --noEmit && vite build",
@@ -16,7 +16,8 @@
     "aframe": "^1.3.0",
     "aframe-look-at-component": "^1.0.0",
     "idb": "^7.0.2",
-    "vue": "^3.2.25"
+    "vue": "^3.2.25",
+    "vue-router": "^4.1.3"
   },
   "devDependencies": {
     "@types/jest": "^28.1.1",
