--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "aframe-look-at-component": "^1.0.0",
     "idb": "^7.0.2",
     "vue": "^3.2.25",
+    "vue-gtag": "^2.0.1",
     "vue-router": "^4.1.3"
   },
   "devDependencies": {
