--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": false,
   "version": "0.0.1",
   "scripts": {
-    "dev": "vite --https --host",
+    "dev": "vite --host",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
     "test": "jest tests/unit",
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@ar-js-org/ar.js": "^3.4.0",
-    "@m-media/npm-cartes-io": "^0.0.5",
+    "@m-media/npm-cartes-io": "^0.0.7",
     "@vueform/multiselect": "^2.4.2",
     "aframe": "^1.3.0",
     "aframe-look-at-component": "^1.0.0",
