--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ar-js-org/ar.js": "^3.4.0",
     "@m-media/npm-cartes-io": "^0.0.9",
     "@marcoschulte/vue3-progress": "^0.0.6",
+    "@picocss/pico": "^1.5.3",
     "@vueform/multiselect": "^2.4.2",
     "aframe": "^1.3.0",
     "aframe-look-at-component": "^1.0.0",
