--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "ts-jest": "^26.5.6",
     "typescript": "^4.5.4",
     "vite": "^2.9.9",
+    "vite-plugin-pwa": "^0.12.7",
     "vue-jest": "^5.0.0-alpha.10",
     "vue-tsc": "^0.34.7"
   }
