--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,7 +30,8 @@
     ],
     "types": [
       "vite/client",
-      "@types/jest"
+      "@types/jest",
+      "vite-plugin-pwa/client"
     ]
   },
   "include": [
