--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "vue": "^3.2.25",
     "vue-gtag": "^2.0.1",
     "vue-hotjar-next": "^1.4.0",
-    "vue-router": "^4.1.3"
+    "vue-router": "^4.1.3",
+    "vue3-markdown-it": "^1.0.10"
   },
   "devDependencies": {
     "@types/jest": "^28.1.1",
