--- a/package.json
+++ b/package.json
@@ -19,11 +19,15 @@
     "aframe": "^1.3.0",
     "aframe-look-at-component": "^1.0.0",
     "idb": "^7.0.2",
+    "ol": "^8.2.0",
+    "ol-contextmenu": "^5.3.0",
+    "ol-ext": "^4.0.13",
     "vue": "^3.2.25",
     "vue-gtag": "^2.0.1",
     "vue-hotjar-next": "^1.4.0",
     "vue-router": "^4.1.3",
-    "vue3-markdown-it": "^1.0.10"
+    "vue3-markdown-it": "^1.0.10",
+    "vue3-openlayers": "^4.0.0"
   },
   "devDependencies": {
     "@types/jest": "^28.1.1",
