--- a/package.json
+++ b/package.json
@@ -30,11 +30,12 @@
     "vue3-openlayers": "^4.0.0"
   },
   "devDependencies": {
-    "@types/jest": "^28.1.1",
+    "@types/jest": "^28.1.8",
     "@types/leaflet": "^1.7.11",
     "@types/leaflet-geosearch": "^3.0.0",
     "@types/leaflet.locatecontrol": "^0.74.0",
     "@types/leaflet.markercluster": "^1.5.1",
+    "@types/ol-ext": "npm:@siedlerchr/types-ol-ext@^3.2.4",
     "@vitejs/plugin-vue": "^2.3.3",
     "@vue-leaflet/vue-leaflet": "^0.6.1",
     "@vue/test-utils": "^2.0.0-rc.18",
