--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "cartesio",
   "private": false,
   "version": "0.0.1",
+  "engines": {
+    "node": ">=20.0.0"
+  },
   "scripts": {
     "dev": "vite --host",
     "build": "vue-tsc --noEmit && vite build",
@@ -14,7 +17,7 @@
     "@m-media/npm-cartes-io": "^0.1.2",
     "@m-media/vue3-meta-tags": "^0.0.6",
     "@marcoschulte/vue3-progress": "^0.0.6",
-    "@picocss/pico": "1.5.3",
+    "@picocss/pico": "2.0.3",
     "@vueform/multiselect": "^2.4.2",
     "aframe": "^1.3.0",
     "aframe-look-at-component": "^1.0.0",
